# salami

./: .gitignore  Makefile  README.md  go.mod  go.sum  go.work  main.go  pyproject.toml  salami.yaml
.github/scripts/: generate_homebrew_tap.sh  salami_tap_template.rb
.github/templates/: salami_tap_template.rb
.github/workflows/: build.yml  create_gh_release.yml  create_release.yml  release_homebrew_tap.yml  release_packages.yml  run_tests.yml  test.yml  test_installs.yml  test_linux_install.yml  test_macos_install.yml  test_windows_install.yml
.python-old/engine/: openai.py
backend/: backend.go
backend/llm/: llm.go
backend/target_file_manager/: errors.go  target_file_manager.go  target_file_manager_test.go  write_target_files.go
backend/targets/: target.go
backend/types/: types.go
cli/: go.mod  main.go
common/change_manager/: change_manager.go  change_set.go  change_set_test.go  new_objects.go  new_objects_test.go
common/change_set/: change_set.go  change_set_repository.go  change_set_test.go
common/change_set_manager/: change_set_manager.go
common/config/: config.go  config_test.go  errors.go  validate.go  validate_test.go
common/constants/: constants.go
common/driver/: backend.go  driver.go  frontend.go  parse_files.go  run.go  (+2 more)
compiler/: driver.go  error_handler.go  lexer.go  parser.go  symbol_table.go
docs/: architecture.md
engine/: code_generator.py  openai.py  parse_source.py  parser.py  pulumi_resource.py  pydantic_to_openai.py  types.py
example/: variables.sami
example-project/: salami.yaml
tests/: mongodb.py  test_run.py
(+353 files in other folders)
